@@ -1,3 +1,8 @@
+2011-01-13  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * src/jackplay.c
+    Improve reporting of loop count.
+
 2011-01-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/*.[ch]
